samples/_failures_safe/1761349654_82aa7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_44ac312b.c: In function ‘main’:
./samples/SAFE/__tmp_44ac312b.c:136:9: error: expected expression at end of input
  136 |         if (rows2 ==
      |         ^~
./samples/SAFE/__tmp_44ac312b.c:136:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_44ac312b.c:136:9: error: expected declaration or statement at end of input
